# replkit

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO_CONSOLE.md  TODO_Go.md
.kiro/specs/automated-rendering-tests/: design.md  requirements.md  tasks.md  usage.md
.kiro/specs/basic-repl-integration/: design.md  requirements.md  tasks.md
.kiro/specs/console-input-output/: design.md  requirements.md  tasks.md
.kiro/specs/key-input-parser/: design.md  requirements.md  tasks.md
.kiro/specs/text-buffer-document/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  rendering.md  structure.md  tech.md  todo.md
bindings/go/: README.md  console_input.go  go.mod  integration_test.go  key_parser.go  key_parser_test.go  key_string.go  prompt.go  simple_prompt.go  text_buffer.go  text_buffer_test.go  wasm_output.go
bindings/go/_examples/: README.md  go.mod  go.sum  go_key_demo.go  go_key_demo_test.go  integrated_demo.go
bindings/go/_examples/buffer/: main.go
bindings/go/_examples/key_input_debug/: main.go  main_test.go
bindings/go/_examples/simple_prompt/: go.mod  go.sum  main.go
bindings/go/_examples/wasm_test/: go.mod  main.go
bindings/go/text_buffer/: README.md  go.mod  prompt_wasm.wasm  text_buffer.go  text_buffer_test.go
bindings/go/text_buffer/_examples/: go.mod  text_buffer_demo.go
crates/prompt-core/: Cargo.toml
crates/prompt-core/examples/: wasm_serialization.rs
crates/prompt-core/src/: buffer.rs  console.rs  document.rs  error.rs  key.rs  key_parser.rs  lib.rs  sequence_matcher.rs  unicode.rs  wasm.rs
crates/prompt-io/: Cargo.toml
crates/prompt-io/src/: lib.rs  mock.rs  unix.rs  wasm.rs  windows.rs
crates/prompt-io/src/windows/: vt.rs
crates/prompt-io/tests/: factory_integration.rs  windows_vt_integration.rs
crates/prompt-pyo3/: Cargo.toml  README.md  dev.py  pyproject.toml  test_structure.py
crates/prompt-pyo3/examples/: basic_usage.py
crates/prompt-pyo3/prompt/: __init__.py
crates/prompt-pyo3/python-examples/: test_vt100.py  vt100_debug.py
crates/prompt-pyo3/python_tests/: test_basic.py  test_key_parser.py
crates/prompt-pyo3/src/: lib.rs
crates/prompt-wasm/: Cargo.toml  build.sh
crates/prompt-wasm/src/: lib.rs
crates/replkit/: Cargo.toml  README.md
crates/replkit-core/: Cargo.toml
crates/replkit-core/examples/: README.md  basic_repl.rs  platform_factory_demo.rs  wasm_serialization.rs
crates/replkit-core/src/: buffer.rs  completion.rs  console.rs  document.rs  error.rs  event_loop.rs  key.rs  key_handler.rs  key_parser.rs  lib.rs  platform.rs  prelude.rs  prompt.rs  renderer.rs  repl.rs  sequence_matcher.rs  suggestion.rs  unicode.rs  wasm.rs
crates/replkit-io/: Cargo.toml
crates/replkit-io/examples/: debug_key_input.rs  platform_factory_demo.rs  unix_console_output_demo.rs
crates/replkit-io/src/: debug.rs  lib.rs  mock.rs  unix.rs  wasm.rs  windows.rs
crates/replkit-io/src/windows/: vt.rs
crates/replkit-io/tests/: factory_integration.rs  platform_factory_integration.rs  windows_vt_integration.rs
crates/replkit-pyo3/: Cargo.toml  README.md  pyproject.toml
crates/replkit-pyo3/python-examples/: test_vt100.py  vt100_debug.py
crates/replkit-pyo3/replkit/: __init__.py
crates/replkit-pyo3/src/: lib.rs
crates/replkit-pyo3/tests/: test_key_parser.py
crates/replkit-snapshot/: Cargo.toml  FIND_INTERACTIVE_BUG.md  example_steps.yaml  key_test.yaml  simple_example.yaml
crates/replkit-snapshot/examples/: run_simple_prompt_test.sh  simple_prompt_test.yaml
crates/replkit-snapshot/examples/snapshots/: completion-u-tab.golden  initial-prompt.golden
crates/replkit-snapshot/src/: capture.rs  cli.rs  comparator.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs  pty.rs
crates/replkit-snapshot/test_snapshots/: simple-test.golden
crates/replkit-snapshot/tests/: cli_tests.rs
crates/replkit-wasm/: Cargo.toml  build.sh
crates/replkit-wasm/src/: lib.rs
crates/replkit/examples/: executor_example.rs  simple_prompt.rs  sql_prompt.rs
crates/replkit/src/: completion.rs  lib.rs  prelude.rs  prompt.rs  renderer.rs  suggestion.rs
crates/replkit/tests/: basic_rendering_test.rs  common.rs  executor_test.rs  integration_test.rs
examples/: debug_key_input.rs  unix_console_output_demo.rs  vt100_debug.rs
snapshot-tests/: setup.sh
