[workspace]
members = [
    "crates/prompt-core",
    "crates/prompt-wasm",
    "crates/prompt-pyo3",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Library for building powerful interactive prompts"
repository = "https://github.com/c-bata/prompt"
keywords = ["terminal"]
license = "MIT"

[workspace.dependencies]
libc = "0.2"

# Main package for examples
[package]
name = "prompt"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
prompt-core = { path = "crates/prompt-core" }
libc = { workspace = true }

[[example]]
name = "vt100_debug"
path = "examples/vt100_debug.rs"
