[workspace]
members = [
    "crates/replkit",
    "crates/replkit-core",
    "crates/replkit-wasm",
    "crates/replkit-pyo3",
    "crates/replkit-io",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Library for building powerful interactive prompts"
repository = "https://github.com/c-bata/replkit"
keywords = ["terminal"]
license = "MIT"

[workspace.dependencies]
libc = "0.2"
