[package]
name = "prompt-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
wasm = ["serde"]
