[package]
name = "replkit-io"
version = "0.1.0"
edition = "2021"
description = "Cross-platform terminal backend abstraction for replkit"

[dependencies]
replkit-core = { path = "../replkit-core" }

# Unix/Linux dependencies
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Windows dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winbase", "handleapi", "synchapi", "processenv", "consoleapi"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
