[package]
name = "replkit-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for REPLKIT"
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
replkit-core = { path = "../replkit-core", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Remove wasm-bindgen dependencies for simpler C-style exports

# Enable optimizations for WASM
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]