[package]
name = "replkit"
version = "0.1.0"
edition = "2021"
authors = ["c-bata"]
description = "Interactive prompt library for building command-line applications"
keywords = ["prompt", "cli", "terminal", "interactive", "readline"]
categories = ["command-line-interface", "text-processing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/c-bata/replkit"

[dependencies]
replkit-core = { path = "../replkit-core", version = "0.1.0" }
replkit-io = { path = "../replkit-io", version = "0.1.0" }

[dev-dependencies]
# Add development dependencies as needed

[features]
default = []

# Optional features for advanced functionality
wasm = ["replkit-core/wasm"]
