[package]
name = "replkit"
version = "0.1.0"
edition = "2021"
authors = ["c-bata"]
description = "Interactive prompt library for building command-line applications"
keywords = ["prompt", "cli", "terminal", "interactive", "readline"]
categories = ["command-line-interface", "text-processing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/c-bata/replkit"

[dependencies]
replkit-core = { path = "../replkit-core", version = "0.1.0" }
replkit-io = { path = "../replkit-io", version = "0.1.0" }

[dev-dependencies]
# Testing dependencies for automated rendering tests
termwiz = "0.22"
insta = "1.34"
thiserror = "1.0"

[features]
default = []

# Optional features for advanced functionality
wasm = ["replkit-core/wasm"]

[[example]]
name = "executor_example"
path = "examples/executor_example.rs"

[[example]]
name = "sql_prompt"
path = "examples/sql_prompt.rs"
